Support multiple required permissions for conditional player selection
- **`ConditionalConfig` & `Config`**:
  - Replaced `requiredPermission` with `requiredPermissions` (List).
  - Added fallback to include a single `requiredPermission` in `requiredPermissions` if defined.

- **`GUIUtils`**:
  - Updated permission filtering to support multiple permissions. Players are selected if they match any permission in the list.

- **`OnlineGUIInventory` & `ConditionalGUIInventory`**:
  - Adjusted logic to handle `List<String>` for player permission checks.

- **`config.yml` & `custom_gui.yml_example`**:
  - Updated configuration schema and comments to document `nodes` for multiple permissions.

Improves flexibility and granularity for permission-based filtering in player selection.